# katmap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml  justfile  package.json  shell.nix
client/: admin-history.html  debug-location-pushes.html  index.html  overlay.html  package-lock.json  package.json  snipe.html  tsconfig.json  vite.config.ts
client/overlays/: weather.html
client/src/: admin-history.css  admin-history.ts  api-types.ts  api.ts  debug-location-pushes.css  debug-location-pushes.ts  geo.ts  geocoding.ts  gradients.ts  html.ts  main.ts  maneuvers.ts  map-layers.ts  map-utils.ts  map.ts  net.ts  overlay.css  overlay.ts  polyline.ts  settings.ts  sidebar.ts  snipe.css  snipe.ts  state.ts  strings.ts  style.css  themes.ts  toast.ts  types.ts  units.ts  waypoint-input.ts  weather-overlay.css  weather-overlay.ts  weather.ts
docs/: README.md  admin-pages.md  build-and-dev.md  client-internals.md  codebase-overview.md  companion-app.md  patterns-and-gotchas.md  server-internals.md  theme-system.md  wire-protocol.md
server/: .env.example  Cargo.toml  build.rs
server/src/: admin.rs  admin_history.html  auth.rs  companion.rs  debug.rs  domain_tests.rs  geo.rs  history.rs  lib.rs  main.rs  poi.rs  resolve.rs  snipe.html  snipe.rs  twitch.rs  types.rs  valhalla.rs  ws.rs
server/src/history/: db.rs  edits.rs
